--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "lucide-react": "^0.518.0",
     "motion": "^12.18.1",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
+    "openai": "^5.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
